# icub-selftouch-with-gaze-generator

./: CMakeLists.txt  README.md  selftouchWithGazeGenerator.cpp
app/scripts/: icubSimSelfTouchWithGaze.xml
